Replace README.md with improved, structured Spanish README